# referring_expression_generation

./: CMakeLists.txt  package.xml
include/referring_expression_generation/: StatsManager.h
include/referring_expression_generation/RegLocal/: OntologyAbstraction.h  Reg.h
include/referring_expression_generation/RegServer/: OntologyAbstraction.h  Reg.h
include/referring_expression_generation/RegTypes/: Action.h  CompoundEntity.h  Node.h  Problem.h  State.h  Triplet.h
launch/: test.launch
resources/conf/: no_generalization.yaml
resources/ontology/: actions.owl  bedroom.owl  expe_ontology.owl  living_room.owl  office.owl  performance.owl
src/RegLocal/: OntologyAbstraction.cpp  Reg.cpp
src/RegServer/: OntologyAbstraction.cpp  Reg.cpp
src/RegTypes/: CompoundEntity.cpp
src/tests/: reg_local.cpp  reg_server.cpp
