<?xml version="1.0"?>
<package format="2">
  <name>referring_expression_generation</name>
  <version>0.0.1</version>
  <description>The referring_expression_generation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="gsarthou@laas.fr">Guillaume Sarthou</maintainer>


  <license>LGPLv3</license>

  <!-- <url type="website">http://wiki.ros.org/referring_expression_generation</url> -->

  <author email="gsarthou@laas.fr">Guillaume Sarthou</author>
  <author email="gbuisan@laas.fr">Guilhem Buisan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ontologenius</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>ontologenius</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>ontologenius</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
